# MiniatureProjectTracker

./: .dockerignore  .env.docker  .env.local  .env.postgres  .gitignore  Cargo.toml  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  openapi.yaml  quick-start.sh  script.js  styles.css  test-security-change.md
.github/workflows/: ci.yml  deploy.yml  security-pr.yml  security.yml
.kiro/specs/miniature-painting-tracker/: design.md  requirements.md  tasks.md
.kiro/specs/miniature-painting-tracker-ios/: design.md  requirements.md  tasks.md
backend/: .env.example  Cargo.toml  deny.toml
backend/migrations/: 001_initial_schema.sql  002_miniature_recipes.sql
backend/src/: config.rs  database.rs  error.rs  integration_tests.rs  main.rs  tests.rs
backend/src/handlers/: miniature_recipes.rs  miniatures.rs  mod.rs  photos.rs  projects.rs  recipes.rs
backend/src/repositories/: miniature_recipe_repository.rs  miniature_repository.rs  mod.rs  photo_repository.rs  project_repository.rs  recipe_repository.rs
backend/src/services/: storage_service.rs
backend/src/storage/: local.rs  mod.rs  s3.rs
config/environments/: aws-dev.env  aws-prod.env  docker.env  local.env
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  integration.test.tsx  main.tsx
infrastructure/: README.md  cdk.json  package.json  tsconfig.json
infrastructure/config/: dev.json  prod.json
infrastructure/lib/: miniature-tracker-stack.ts
infrastructure/scripts/: deploy.sh  destroy.sh  migrate.sh
scripts/: build-all.sh  build-backend.sh  build-frontend.sh  configure-env.sh  dev-start.sh  docker-build.sh  docker-dev.sh  docker-postgres.sh  docker-prod.sh  migrate-local.sh  setup-local.sh  verify-setup.sh
shared-types/: Cargo.toml
shared-types/src/: lib.rs
(+340 files in other folders)
