[workspace]
members = [
    "backend",
    "shared-types"
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }